--- a/tests/cassettes/test_referral_customer_add_credit_card.yaml
+++ b/tests/cassettes/test_referral_customer_add_credit_card.yaml
@@ -16,16 +16,15 @@ interactions:
     uri: https://api.easypost.com/v2/partners/stripe_public_key
   response:
     body:
-      string: '{"public_key": "pk_x3JSr5eOVWNTLRej8cZDde9VQ0AT5"}'
+      string: '{"error": {"code": "MODE.UNAUTHORIZED", "message": "This resource requires
+        a production API Key to access.", "errors": []}}'
     headers:
       cache-control:
       - private, no-cache, no-store
       content-length:
-      - '49'
+      - '117'
       content-type:
       - application/json; charset=utf-8
-      etag:
-      - W/"86cc970265a111486b443bf66ef85e91"
       expires:
       - '0'
       pragma:
@@ -43,162 +42,23 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - fb9a52be6323681ae787d97f00082572
+      - 3ecd17936462b3d5e2ba02ed000c1735
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb5nuq
+      - bigweb6nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb1nuq 6aa9972c1e
-      - extlb2nuq 9ce216bfac
+      - intlb2nuq a29e4ad05c
+      - extlb1nuq 5ab12a3ed2
       x-runtime:
-      - '0.016635'
+      - '0.031351'
       x-version-label:
-      - easypost-202209142327-76d51e2e7e-master
+      - easypost-202305152107-770224374c-master
       x-xss-protection:
       - 1; mode=block
     status:
-      code: 200
-      message: OK
-- request:
-    body: null
-    headers:
-      Accept:
-      - '*/*'
-      Accept-Encoding:
-      - gzip, deflate
-      Connection:
-      - keep-alive
-      Content-Length:
-      - '0'
-      Content-type:
-      - application/x-www-form-urlencoded
-      authorization:
-      - <REDACTED>
-      user-agent:
-      - <REDACTED>
-    method: POST
-    uri: https://api.stripe.com/v1/tokens?card%5Bexp_month%5D=05&card%5Bexp_year%5D=2028
-  response:
-    body:
-      string: '{"id": "tok_0LiMLuDqT4huGUvdJkBtSAad", "object": "token", "card": {"id":
-        "card_0LiMLuDqT4huGUvdwvFxsoce", "object": "card", "address_city": null, "address_country":
-        null, "address_line1": null, "address_line1_check": null, "address_line2":
-        null, "address_state": null, "address_zip": null, "address_zip_check": null,
-        "brand": "Visa", "country": "US", "cvc_check": "unchecked", "dynamic_last4":
-        null, "exp_month": 5, "exp_year": 2028, "funding": "credit", "last4": "6170",
-        "name": null, "tokenization_method": null}, "client_ip": "<REDACTED>", "created":
-        1663264794, "livemode": true, "type": "card", "used": false}'
-    headers:
-      Connection:
-      - keep-alive
-      Content-Length:
-      - '719'
-      Content-Type:
-      - application/json
-      Date:
-      - Thu, 15 Sep 2022 17:59:54 GMT
-      Server:
-      - nginx
-      Strict-Transport-Security:
-      - max-age=63072000; includeSubDomains; preload
-      access-control-allow-credentials:
-      - 'true'
-      access-control-allow-methods:
-      - GET, POST, HEAD, OPTIONS, DELETE
-      access-control-allow-origin:
-      - '*'
-      access-control-expose-headers:
-      - Request-Id, Stripe-Manage-Version, X-Stripe-External-Auth-Required, X-Stripe-Privileged-Session-Required
-      access-control-max-age:
-      - '300'
-      cache-control:
-      - no-cache, no-store
-      idempotency-key:
-      - 08669557-88f3-4a81-89b7-79d6b53b98f1
-      original-request:
-      - req_Rjld5zF1YhBeQs
-      request-id:
-      - req_Rjld5zF1YhBeQs
-      stripe-should-retry:
-      - 'false'
-      stripe-version:
-      - '2020-08-27'
-    status:
-      code: 200
-      message: OK
-- request:
-    body: '{"credit_card": {"stripe_object_id": "tok_0LiMLuDqT4huGUvdJkBtSAad", "priority":
-      "primary"}}'
-    headers:
-      Accept:
-      - '*/*'
-      Accept-Encoding:
-      - gzip, deflate
-      Connection:
-      - keep-alive
-      Content-Length:
-      - '92'
-      Content-Type:
-      - application/json
-      authorization:
-      - <REDACTED>
-      user-agent:
-      - <REDACTED>
-    method: POST
-    uri: https://api.easypost.com/v2/credit_cards
-  response:
-    body:
-      string: '{"id": "card_55b732842711403ca4d34abbae7e6884", "disabled_at": null,
-        "object": "CreditCard", "name": null, "last4": "6170", "exp_month": 5, "exp_year":
-        2028, "brand": "Visa"}'
-    headers:
-      cache-control:
-      - private, no-cache, no-store
-      content-length:
-      - '159'
-      content-type:
-      - application/json; charset=utf-8
-      etag:
-      - W/"2a6f8717ccd56df83817bc8b10feac63"
-      expires:
-      - '0'
-      pragma:
-      - no-cache
-      referrer-policy:
-      - strict-origin-when-cross-origin
-      strict-transport-security:
-      - max-age=31536000; includeSubDomains; preload
-      transfer-encoding:
-      - chunked
-      x-backend:
-      - easypost
-      x-canary:
-      - direct
-      x-content-type-options:
-      - nosniff
-      x-download-options:
-      - noopen
-      x-ep-request-uuid:
-      - fb9a52be6323681ae787d97f000825b8
-      x-frame-options:
-      - SAMEORIGIN
-      x-node:
-      - bigweb7nuq
-      x-permitted-cross-domain-policies:
-      - none
-      x-proxied:
-      - intlb2nuq 6aa9972c1e
-      - extlb2nuq 9ce216bfac
-      x-runtime:
-      - '3.417627'
-      x-version-label:
-      - easypost-202209142327-76d51e2e7e-master
-      x-xss-protection:
-      - 1; mode=block
-    status:
-      code: 201
-      message: Created
+      code: 403
+      message: Forbidden
 version: 1
