--- a/tests/cassettes/test_referral_customer_create.yaml
+++ b/tests/cassettes/test_referral_customer_create.yaml
@@ -20,16 +20,26 @@ interactions:
     uri: https://api.easypost.com/v2/referral_customers
   response:
     body:
-      string: '{"error": {"code": "UNAUTHORIZED", "message": "Your account is not
-        enabled to access the Partner White Label API. Contact EasyPost to request
-        access.", "errors": []}}'
+      string: '{"id": "user_17decae9b65341fbba885b525a10ac3f", "object": "User", "parent_id":
+        null, "name": "test test", "phone_number": "<REDACTED>", "verified": true,
+        "created_at": "2023-05-16T14:46:14Z", "default_carbon_offset": false, "has_elevate_access":
+        false, "balance": "0.00000", "price_per_shipment": "0.00000", "recharge_amount":
+        null, "secondary_recharge_amount": null, "recharge_threshold": null, "has_billing_method":
+        null, "cc_fee_rate": "0.0375", "default_insurance_amount": "50.00", "insurance_fee_rate":
+        "0.005", "insurance_fee_minimum": "0.25", "email": "<REDACTED>", "children":
+        [], "api_keys": [{"object": "ApiKey", "key": "<REDACTED>", "mode": "test",
+        "created_at": "2023-05-16T14:46:14Z", "active": true, "id": "ak_85e14e3581034951b4bcf82906197ca2"},
+        {"object": "ApiKey", "key": "<REDACTED>", "mode": "production", "created_at":
+        "2023-05-16T14:46:14Z", "active": true, "id": "ak_cc547bbb5ca94aeead8ffd9fbdfcd2b8"}]}'
     headers:
       cache-control:
       - private, no-cache, no-store
       content-length:
-      - '160'
+      - '1018'
       content-type:
       - application/json; charset=utf-8
+      etag:
+      - W/"ea999d9465271c40ea110cce42a3fa0a"
       expires:
       - '0'
       pragma:
@@ -47,24 +57,23 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 36ec0a8e6462b3d4e2ba02d2003b0df4
+      - 23bee7e764639735e2aac1f9001dd8b6
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb9nuq
+      - bigweb6nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb1nuq a29e4ad05c
-      - intlb1wdc a29e4ad05c
-      - extlb4wdc 5ab12a3ed2
+      - intlb2nuq a29e4ad05c
+      - extlb2nuq 5ab12a3ed2
       x-runtime:
-      - '0.046659'
+      - '1.031822'
       x-version-label:
-      - easypost-202305152107-770224374c-master
+      - easypost-202305152249-750e1e7d95-master
       x-xss-protection:
       - 1; mode=block
     status:
-      code: 401
-      message: Unauthorized
+      code: 201
+      message: Created
 version: 1
