--- a/tests/cassettes/test_referral_customer_add_credit_card.yaml
+++ b/tests/cassettes/test_referral_customer_add_credit_card.yaml
@@ -13,23 +13,18 @@ interactions:
       user-agent:
       - <REDACTED>
     method: GET
-    uri: https://api.easypost.com/v2/refunds?page_size=5
+    uri: https://api.easypost.com/v2/partners/stripe_public_key
   response:
     body:
-      string: '{"refunds": [{"id": "rfnd_bad47afb0a9743b6acbf1ecfad761aa5", "object":
-        "Refund", "created_at": "2023-05-16T15:09:03Z", "updated_at": "2023-05-16T15:09:03Z",
-        "tracking_code": "9400100104262210314976", "confirmation_number": null, "status":
-        "submitted", "carrier": "USPS", "shipment_id": "shp_9543343d31b44ec4863e3679570d73c2"}],
-        "has_more": false}'
+      string: '{"error": {"code": "MODE.UNAUTHORIZED", "message": "This resource requires
+        a production API Key to access.", "errors": []}}'
     headers:
       cache-control:
       - private, no-cache, no-store
       content-length:
-      - '326'
+      - '117'
       content-type:
       - application/json; charset=utf-8
-      etag:
-      - W/"9201c691d2cf85a3b6d58c01209062c9"
       expires:
       - '0'
       pragma:
@@ -42,28 +37,30 @@ interactions:
       - chunked
       x-backend:
       - easypost
+      x-canary:
+      - direct
       x-content-type-options:
       - nosniff
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 23bee7e464639c8fe786a73800200900
+      - 23bee7e064639c8de786a73600200869
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb12nuq
+      - bigweb7nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb2nuq a29e4ad05c
+      - intlb1nuq a29e4ad05c
       - extlb2nuq 5ab12a3ed2
       x-runtime:
-      - '0.120362'
+      - '0.031099'
       x-version-label:
       - easypost-202305152249-750e1e7d95-master
       x-xss-protection:
       - 1; mode=block
     status:
-      code: 200
-      message: OK
+      code: 403
+      message: Forbidden
 version: 1
