--- a/tests/cassettes/test_report_create_with_additional_columns.yaml
+++ b/tests/cassettes/test_report_create_with_additional_columns.yaml
@@ -1,7 +1,7 @@
 interactions:
 - request:
-    body: '{"type": "shipment", "start_date": "2022-05-04", "end_date": "2022-05-04",
-      "additional_columns": ["from_name", "from_company"]}'
+    body: '{"start_date": "2022-05-04", "end_date": "2022-05-04", "additional_columns":
+      ["from_name", "from_company"]}'
     headers:
       Accept:
       - '*/*'
@@ -10,7 +10,7 @@ interactions:
       Connection:
       - keep-alive
       Content-Length:
-      - '127'
+      - '107'
       Content-Type:
       - application/json
       authorization:
@@ -21,8 +21,8 @@ interactions:
     uri: https://api.easypost.com/v2/reports/shipment
   response:
     body:
-      string: '{"id": "shprep_c35a6c3f676c4825a2aeded1f0dd13b8", "object": "ShipmentReport",
-        "created_at": "2022-08-15T18:52:16Z", "updated_at": "2022-08-15T18:52:16Z",
+      string: '{"id": "shprep_4278c856e8264aeb820b4ade399e7d58", "object": "ShipmentReport",
+        "created_at": "2023-05-16T15:28:53Z", "updated_at": "2023-05-16T15:28:53Z",
         "start_date": "2022-05-04", "end_date": "2022-05-04", "mode": "test", "status":
         "new", "url": null, "url_expires_at": null, "include_children": false}'
     headers:
@@ -33,7 +33,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"9753083618fb6ecaf12a3730386bc2e2"
+      - W/"b2441501e7f8cd92d45b23389d4343ac"
       expires:
       - '0'
       pragma:
@@ -51,20 +51,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - f43af47e62fa95e0e79a7a6500262e1d
+      - 23bee7e66463a135e786afbc0021bb99
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb5nuq
+      - bigweb1nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb2nuq 6aa9972c1e
-      - extlb1nuq 9ce216bfac
+      - intlb1nuq a29e4ad05c
+      - extlb2nuq 5ab12a3ed2
       x-runtime:
-      - '0.048307'
+      - '0.054822'
       x-version-label:
-      - easypost-202208151827-9b2100b5ad-master
+      - easypost-202305152249-750e1e7d95-master
       x-xss-protection:
       - 1; mode=block
     status:
