--- a/tests/cassettes/test_report_create_with_columns.yaml
+++ b/tests/cassettes/test_report_create_with_columns.yaml
@@ -1,7 +1,6 @@
 interactions:
 - request:
-    body: '{"type": "shipment", "start_date": "2022-05-04", "end_date": "2022-05-04",
-      "columns": ["usps_zone"]}'
+    body: '{"start_date": "2022-05-04", "end_date": "2022-05-04", "columns": ["usps_zone"]}'
     headers:
       Accept:
       - '*/*'
@@ -10,7 +9,7 @@ interactions:
       Connection:
       - keep-alive
       Content-Length:
-      - '100'
+      - '80'
       Content-Type:
       - application/json
       authorization:
@@ -21,8 +20,8 @@ interactions:
     uri: https://api.easypost.com/v2/reports/shipment
   response:
     body:
-      string: '{"id": "shprep_27d26c46a12f443a8c1a543c73e9f550", "object": "ShipmentReport",
-        "created_at": "2022-08-15T18:52:17Z", "updated_at": "2022-08-15T18:52:17Z",
+      string: '{"id": "shprep_1ad45dc68aa744f5ad61bfe46d8ee49e", "object": "ShipmentReport",
+        "created_at": "2023-05-16T15:28:53Z", "updated_at": "2023-05-16T15:28:53Z",
         "start_date": "2022-05-04", "end_date": "2022-05-04", "mode": "test", "status":
         "new", "url": null, "url_expires_at": null, "include_children": false}'
     headers:
@@ -33,7 +32,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"48db648345d0fe0657164471e023a968"
+      - W/"6e0c5428a247cbebb24e929a6c323b31"
       expires:
       - '0'
       pragma:
@@ -51,20 +50,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - f43af47962fa95e1e79a7a6600262e38
+      - 23bee7e16463a135e786afbd0021bbb3
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb6nuq
+      - bigweb1nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb2nuq 6aa9972c1e
-      - extlb1nuq 9ce216bfac
+      - intlb2nuq a29e4ad05c
+      - extlb2nuq 5ab12a3ed2
       x-runtime:
-      - '0.039514'
+      - '0.040543'
       x-version-label:
-      - easypost-202208151827-9b2100b5ad-master
+      - easypost-202305152249-750e1e7d95-master
       x-xss-protection:
       - 1; mode=block
     status:
